--- a/style.css
+++ b/style.css
@@ -42,6 +42,8 @@ section {
   background-color: #0d6efd;
   border-radius: 10px;
   height: 500px;
+  overflow: hidden;
+
   transform-style: preserve-3d;
 }
 
