--- a/style.css
+++ b/style.css
@@ -39,10 +39,9 @@ section {
 /* My Render section */
 .render-box {
   position: relative;
-  background-color: #0d6efd;
+  background-color: #212529;
   border-radius: 10px;
   height: 500px;
-  overflow: hidden;
 
   transform-style: preserve-3d;
 }
