--- a/style.css
+++ b/style.css
@@ -39,10 +39,10 @@ section {
 /* My Render section */
 .render-box {
   position: relative;
+
   background-color: #212529;
   border-radius: 10px;
   height: 500px;
-
   transform-style: preserve-3d;
 }
 
@@ -54,7 +54,6 @@ section {
   font-weight: bold;
   font-style: italic;
   top: 30px;
-  left: -100px;
   opacity: 0;
   left: 50%;
   transform: translate(-50%, 0);
@@ -69,7 +68,7 @@ section {
   content: "RENDER";
   position: absolute;
   color: #ffff;
-  font-size: 4em;
+  font-size: 4.3em;
   font-weight: bold;
   font-style: italic;
   top: 350px;
@@ -93,6 +92,7 @@ section {
   opacity: 0;
   transform: translate3d(0, 0, 50px);
   transition: 0.5s;
+  z-index: 10;
 }
 
 .render-box:hover .render-name {
@@ -120,7 +120,7 @@ section {
   top: 50%;
   left: 50%;
   transform: translate3d(-50%, -52%, 100px);
-  max-width: 450px;
+  max-width: 315px;
   transition: 0.5s;
 }
 
